force-app/main/default/objects/Time_Zone__c/Time_Zone__c.object-meta.xml
<CustomObject>
    <label>Time Zone</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Zones</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>