force-app/main/default/objects/Time_Zone__c/fields/Off_Set_Hours__c.field-meta.xml
<CustomField>
    <fullName>Off_Set_Hours__c</fullName>
    <label>Off Set Hours</label>
    <length>5</length>
    <type>Text</type>
</CustomField>