force-app/main/default/objects/Time_Zone__c/fields/Time_Zone_ID__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone_ID__c</fullName>
    <label>Time Zone ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>