force-app/main/default/objects/Time_Zone__c/fields/Use_Daylight_Savings__c.field-meta.xml
<CustomField>
    <fullName>Use_Daylight_Savings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Daylight Savings</label>
    <type>Checkbox</type>
</CustomField>